--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "commitizen": "^4.3.1",
+    "cosmiconfig-typescript-loader": "^6.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "jiti": "^2.4.2",
     "postcss": "^8.5.3",
     "sass": "^1.86.3",
     "tailwindcss": "^4.1.3",
