--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "prepare": "husky",
     "commit": "cz",
-    "test": "echo 'No tests configured' && exit 0"
+    "test": "echo 'No tests configured' && exit 0",
+    "prepare": "husky install"
   },
   "dependencies": {
     "framer-motion": "^12.6.3",
@@ -35,10 +36,20 @@
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
+    "lint-staged": "^15.5.0",
     "postcss": "^8.5.3",
     "sass": "^1.86.3",
     "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "src/**/*.{scss,css}": [
+      "prettier --write"
+    ]
   },
   "config": {
     "commitizen": {
