--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_WORKER_URL=https://predictor-api-668685771199.asia-southeast1.run.app
-
+VITE_WORKER_URL=https://predictor-api.fly.dev
+VITE_API_URL=https://predictor-api.fly.dev
