--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "framer-motion": "^12.6.3",
+    "baselines": "github:cheminfo/baselines",
+    "framer-motion": "^12.20.1",
     "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-plotly.js": "^2.6.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
