--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_WORKER_URL=https://predictor-api.fly.dev
-VITE_API_URL=https://predictor-api.fly.dev
+VITE_WORKER_URL=https://predictor-api-app.greenriver-3cc47573.southeastasia.azurecontainerapps.io
+VITE_API_URL=https://predictor-api-app.greenriver-3cc47573.southeastasia.azurecontainerapps.io
