--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "baselines": "github:cheminfo/baselines",
     "framer-motion": "^12.20.1",
     "plotly.js": "^3.0.1",
