--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "antd": "^5.26.3",
     "baselines": "github:cheminfo/baselines",
     "framer-motion": "^12.20.1",
     "plotly.js": "^3.0.1",
